[package]
name = "matrix_det_parser"
version = "0.1.0"
edition = "2021"
description = "Бібліотека для обчислення детермінанту матриці"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.0"
pest = "2.7.5"
pest_derive = "2.1.0"
